src/components/Poster/Poster.module.scss
.container {
  min-height: 10rem;
  overflow: hidden;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px solid gray;
  border-radius: 0.5rem;
  cursor: pointer;
  transition: 0.3s linear;

  &,
  &:active,
  &:visited {
    color: inherit;
    text-decoration: none;
  }

  &:hover {
    transform: scale(1.05);
  }

  &:hover .desriptionWrap {
    visibility: visible;
    opacity: 1;
  }
}

.spinner {
  z-index: 1;
  position: absolute;
  font-size: 5rem;
  animation: rotate 3s linear infinite;
}

.poster {
  z-index: 2;
}

.desriptionWrap {
  z-index: 3;
  visibility: hidden;
  opacity: 0;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  position: absolute;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 1));
  transition: 0.5s;
}

.desription {
  text-align: center;
  padding: 1rem;
  max-height: 100%;
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

